gitops/external-keycloak/keycloak.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
