gitops/external-keycloak/network.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin-interface
spec:
  tls:
  - hosts:
      - keycloak.buc.sh
    secretName: cert-keycloak-buc-sh
  rules:
  - host: "keycloak.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sso-service
            port:
              name: http

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sso-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "sso.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: sso-service
      port: 8080
      weight: 1
    matches:
    - path:
        type: Exact
        value: /
    - path:
        type: PathPrefix
        value: /realms
    - path:
        type: PathPrefix
        value: /resources
    - path:
        type: PathPrefix
        value: /.well-known

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-keycloak-egress
  namespace: external-hfs
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Egress
    - Ingress
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    ports:
    - protocol: TCP
      port: 8080
  # Allow monitoring
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 9000
